--- a/combined-stuff/package.json
+++ b/combined-stuff/package.json
@@ -21,6 +21,8 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
+    "@fortawesome/ember-fontawesome": "^0.1.9",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "ember-cli-babel": "^7.1.2",
     "ember-cli-htmlbars": "^3.0.0",
     "great-component": "^1.0.0",
