--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "private": true,
+  "license": "MIT",
+  "repository": "https://github.com/jrjohnson/fontawesome-test-workspace",
   "workspaces": [
     "sweet-ass-app",
     "combined-stuff",
